--- a/puti.html
+++ b/puti.html
@@ -36,7 +36,7 @@
 </font>
 </div>
 <div align = "center-left">
-<h1><a target = "_self" href = "main.html" title "На главную">На главную </a></h1>
+<h1><a target = "_self" href = "index.html" title "На главную">На главную </a></h1>
 </div>
 </body>
 </html>
