--- a/fot.html
+++ b/fot.html
@@ -36,6 +36,6 @@
 <h1>Продолжение смотри в семейном фотоальбоме...</h1>
 </div>
 <div align = "left">
-<h1><a target = "_self" href = "main.html" title "На главную">На главную </a></h1>
+<h1><a target = "_self" href = "index.html" title "На главную">На главную </a></h1>
 </div>
 </html>
