--- a/dogovor.html
+++ b/dogovor.html
@@ -9,7 +9,7 @@
 <img src = "dogovor.png" alt = "Герб" width = "600" height = "800">
 </div>
 <div align = "left">
-<h1><a target = "_self" href = "main.html" title "На главную">На главную </a></h1>
+<h1><a target = "_self" href = "index.html" title "На главную">На главную </a></h1>
 </div>
 </body>
 </html>
