--- a/puti.html
+++ b/puti.html
@@ -30,7 +30,7 @@
 </tr>
 <tr>
 <td> <font size="24">Выборг </font></td>
-<td> <font size="24">Еще нет </font></td>
+<td> <font size="24">Да </font></td>
 </tr>
 </table>
 </font>
